--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-vector-icons": "^6.6.0",
-    "uuid4": "^1.1.4"
+    "uuidv4": "^6.0.9"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
